--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -31,3 +31,12 @@ body {
     text-wrap: balance;
   }
 }
+
+.text-shadow {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.text-shadow-lg {
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7);
+}
+
